k8s/counter/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: counter-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: counter
spec:
  hosts:
  - "*"
  gateways:
  - counter-gateway
  http:
  - match:
    - uri:
        prefix: /count
    - uri:
        prefix: /increase
    - uri:
        prefix: /decrease
    route:
    - destination:
        port:
          number: 8080
        host: counter
